# rulehook

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
examples/no-test-gaming-demo/: README.md  checkout.py.bak
examples/no-test-gaming-demo/tests/: test_checkout.py
rulehook/: __init__.py  cli.py  engine.py  judge.py  rules.py
rulehook/adapters/: __init__.py  base.py  claude_code.py  codex.py  cursor.py  native_prompt.py
rulehook/presets/: done-discipline.toml  git-discipline.toml  no-test-gaming.toml  security.toml
tests/: test_adapters.py  test_cli.py  test_engine.py  test_judge.py  test_rules.py
