[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rulehook"
version = "0.2.0"
description = "Turn natural-language rules into cross-platform prompt-based hooks for coding agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["claude-code", "codex", "cursor", "hooks", "prompt-hooks", "guardrails", "llm-as-judge", "agent", "ai-safety"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/rulehook"
Issues = "https://github.com/YOUR_USERNAME/rulehook/issues"
Changelog = "https://github.com/YOUR_USERNAME/rulehook/blob/main/CHANGELOG.md"

[project.scripts]
rulehook = "rulehook.cli:main"

[tool.setuptools.packages.find]
include = ["rulehook*"]

[tool.setuptools.package-data]
rulehook = ["presets/*.toml"]
